<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoPhoto</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_photo">photo</string>
    <string name="button_location">location</string>
    <string name="button_send">send</string>
    <string name="view_photo_descr">Photo</string>
    <string name="text_location">Location: </string>
    <string name="text_searching">searching &#8230;</string>
    <string name="text_date">Date: </string>
    <string name="album_name">GeoPhoto</string>
    <string name="dialog_gps_title">GPS settings</string>
    <string name="dialog_gps_message">GPS is not enabled. Do you want to enable it in the system settings?</string>
    <string name="dialog_network_title">Connection settings</string>
    <string name="dialog_network_message">No network connection available. Do you want to enable it in the system settings?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="server_url">http://192.168.1.186/geophoto/geophoto.php</string>
    <string name="pref_server_summary">Address of the server.</string>
    <string name="pref_server_title">Server Address</string>
    <string name="pref_category_network">Network</string>

</resources>