<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/buttonPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonLocation"
        android:layout_toLeftOf="@+id/buttonLocation"
        android:contentDescription="@string/button_photo"
        android:onClick="takePhoto"
        android:src="@drawable/ic_action_photo" />

    <ImageButton
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonLocation"
        android:layout_alignBottom="@+id/buttonLocation"
        android:layout_toRightOf="@+id/buttonLocation"
        android:contentDescription="@string/button_send"
        android:enabled="false"
        android:onClick="sendData"
        android:src="@drawable/ic_action_send" />

    <ImageButton
        android:id="@+id/buttonLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/button_location"
        android:enabled="false"
        android:onClick="takeLocation"
        android:src="@drawable/ic_action_location" />

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textLocation"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/view_photo_descr" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textDate"
        android:layout_centerHorizontal="true"
        android:text="@string/text_location" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonPhoto"
        android:layout_centerHorizontal="true"
        android:text="@string/text_date" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonSend"
        android:layout_marginBottom="14dp"
        android:layout_toRightOf="@+id/buttonSend"
        android:indeterminate="true"
        android:visibility="invisible" />

</RelativeLayout>